src/screens/details/Details.css
.main {
  flex-direction: column;
  display: flex;
  margin-bottom: 100px;
}

.restaurant-details {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  width: auto;
  background-color: lightgray;
  justify-content: flex-start;
  height: 200px;
  padding: 25px 20px;
}

.restaurant-name {
  font-weight: normal;
  font-size: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.cart-counter {
  z-index: 0;
}

.restaurant-image {
  height: 100%;
  width: 100%;
}

.rating-container {
  width: 50%;
}

.rating-section-left {
  flex: 50%;
}

.avgprice-container {
  flex: 50%;
}

.image-container {
  flex: 25%;
  height: 200px;
  width: 250px;
}

.rating-avgprice-container {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;
}

.menu {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 20px;
}

.items-list {
  width: 40%;
  padding-left: 50px;
  padding-top: 5px;
  flex: 60%;
}

.details-container {
  flex: 75%;
  padding-left: 50px;
}

.item {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-between;
  padding-top: 10px;
  width: 100%;
  font-weight: normal;
  font-size: 18px;
  flex-wrap: nowrap;
}

.item-right {
  flex: 40%;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}

.price {
  float: right;
}

.addIcon {
  flex: 50%;
  padding-right: 100px;
}

.item-left {
  flex: 60%;
  width: 100%;
  margin-right: 20px;
}

.add-remove-icon {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.add-icon-plus-button {
  display: flex;
  padding: 0;
  color: black;
  font-size: 16px !important;
  margin-top: 3px;
  margin-left: 3px;
}

.plus:hover {
  background-color: #fdff81 !important;
}

.plus {
  height: 20px;
  width: 20px;
}

.cart-container {
  padding-left: 100px;
  padding-top: 25px;
  height: auto;
  width: 65%;
}

.cart-item {
  font-size: 16px;
  font-weight: lighter;
}

.items-in-cart {
  padding-top: 20px;
}

.cart-item {
  margin-top: 3px;
  font-size: 18px;
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-between;
  font-weight: lighter;
}

.cart-item-right {
  float: right;
}

.CardContent {
  padding: 10px;
}

.total-amount-section {
  font-weight: bold;
  font-size: 18px;
  margin-top: 25px;
}

.item-name {
  padding-left: 12px;
  word-wrap: break-word;
}

.cart-item-left {
  flex: 50%;
}

.cart-item-centre {
  flex: 30%;
  font-weight: bold;
}

.cart-item-right {
  flex: 20%;
}

.checkout-btn {
  width: 100%;
}

.minus {
  display: flex;
  width: 50%;
  justify-content: space-around;
}

.minus .MuiIconButton-label {
  height: 20px;
  width: 20px;
}

.minus .MuiIconButton-label:hover {
  background-color: #fdff81 !important;
}

.category {
  padding-top: 20px;
}


/* Extra small devices (phones, 600px and down) */
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (max-width: 600px), (max-width: 768px) {
  .main-container-body {
    width: 100%;
  }
  .menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin: 0px;
  }
  .restaurant-details {
    width: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 4px 2px;
    height: auto;
  }
  .image-container {
    width: 70%;
  }
  .details-container {
    width: 80%;
    text-align: center;
    padding-left: 0px;
  }
  .items-list {
    flex: 100%;
    width: 80%;
    font-size: 15px;
    margin: 10px;
    padding: 5px;
  }
  .item {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-top: 10px;
    width: 100%;
  }
  .item-left {
    flex: 50%;
    width: 100%;
  }
  .removeIcon-cart {
    padding: 2px;
  }
  .addIcon {
    padding-right: 0px;
  }
  .item-right {
    flex: 50%;
    width: 100%;
  }
  .cart-container {
    flex: 100%;
    width: 82%;
    padding: 10px 0px 0px 0px;
  }
  .add-remove-icon {
    flex: 30%;
    flex-direction: column;
    padding-left: 5px;
  }
  .cart-item-centre {
    flex: 30%;
    font-weight: bolder;
    padding: 0 0;
  }
  .cart-item-right {
    flex: 30%;
  }
  .item-name {
    padding-left: 2px;
  }
  .cart-item {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    justify-content: space-between;
  }
  .addIcon-cart {
    padding: 2px;
  }
  .cart-item-left {
    flex: 40%;
    flex-wrap: wrap;
  }
  .plus {
    margin-left: auto;
  }
}

